[package]
name = "graphql-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-lab = "0.20.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
juniper = "0.15.11"
log = "0.4.20"
r2d2 = "0.8.10"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
